--- a/templates/tension/new.html
+++ b/templates/tension/new.html
@@ -479,6 +479,9 @@
             this.tension.pic1          = "";
             this.tension.pic2          = "";
             this.tension.pic3          = "";
+
+            this.dsp.maxload = 0;
+            this.dsp.rol = 0;
             e.preventDefault();
           },
           calMaxLoad: function() {
